# escpos-server

./: README.md  pyproject.toml
escpos_server/: cli.py  printer.py  server.py  signals.py  status.py  web.py
