[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "escpos-server"
authors = [
    {name = "Raphael Michel"},
]
maintainers = [
    {name = "Raphael Michel"},
]
description = "ESC/POS server with monitoring features"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "pyusb==1.3.*",
    "fastapi==0.138.1",
    "uvicorn==0.49.0",
]
dynamic = ["version"]

[project.urls]
Home = "https://github.com/pretix/escpos-server"

[project.scripts]
escpos-server = "escpos_server.cli:main"

[tool.setuptools.dynamic]
version = {attr = "escpos_server.__version__"}